--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
 html {
-    font-family: monospace;
+    font-family: serif;
+    max-width: 968px;
+}
+
+li {
+    line-height: 175%;
+}
+
+p {
+    line-height: 150%;
+    word-break: break-word;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+section#experience {
+    word-break: break-word;
+    text-align: justify;
+    text-justify: inter-word;
 }
