--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 html {
-    font-family: serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
     max-width: 968px;
+    margin: auto;
 }
 
 li {
